# copilot-conductor

./: AGENTS.md  IMPLEMENTATION_NOTES.md  Makefile  README.md  add-claude-sdk-support.plan.md  add-claude-sdk-support.plan.md.bak  pyproject.toml
.claude/skills/conductor/: SKILL.md
.claude/skills/copilot-conductor/: SKILL.md
.github/workflows/: ci.yml  claude-tests.yml  publish.yml
docs/: architecture-decisions.md  configuration.md  dynamic-parallel.md  parallel-execution.md  workflow-syntax.md
docs/projects/: copilot-conductor.brainstorm.md  copilot-conductor.plan.md
docs/projects/agent-sdk/: claude-provider.design.md
docs/projects/brainstorm/: caching.brainstorm.md  checkpointing.brainstorm.md  cost-tracking.brainstorm.md
docs/projects/init/: copilot-conductor.design.md
docs/projects/parallel-agents/: dynamic-parallel-agents.plan.md  parallel-agent-execution.plan.md  prerequisite-verification.md
docs/providers/: claude.md  comparison.md  migration.md
examples/: README.md  design-review.yaml  for-each-simple.yaml  implement.yaml  kpi-analysis-parallel.yaml  kpi-analysis.yaml  multi-provider-research.yaml  parallel-research.yaml  parallel-validation.yaml  plan.yaml  research-assistant-claude.yaml  research-assistant.yaml  simple-qa-claude.yaml  simple-qa.yaml
src/conductor/: __init__.py  __main__.py  exceptions.py  mcp_auth.py
src/conductor/cli/: __init__.py  app.py  init.py  run.py  validate.py
src/conductor/config/: __init__.py  loader.py  schema.py  validator.py
src/conductor/engine/: __init__.py  context.py  limits.py  pricing.py  router.py  usage.py  workflow.py
src/copilot_conductor/: __init__.py  __main__.py  exceptions.py  mcp_auth.py
tests/: __init__.py  conftest.py  test_exceptions.py  test_performance.py
tests/test_cli/: __init__.py  test_e2e.py  test_init.py  test_run.py  test_validate.py  test_verbose.py
tests/test_config/: __init__.py  test_backward_compatibility.py  test_ci_infrastructure.py  test_claude_parameter_errors.py  test_loader.py  test_parallel_validation.py  test_schema.py  test_validator.py
tests/test_engine/: __init__.py  test_context.py  test_limits.py  test_parallel.py  test_pricing.py  test_router.py  test_usage.py  test_workflow.py
tests/test_executor/: __init__.py  test_agent.py  test_output.py  test_template.py
tests/test_gates/: __init__.py  test_human.py
tests/test_integration/: __init__.py  test_claude_real_api.py  test_claude_workflows.py  test_end_to_end_claude.py  test_examples.py  test_existing_workflows_integration.py  test_for_each.py  test_for_each_verbose.py  test_mixed_providers.py  test_parallel_workflows.py  test_parameter_flow_verification.py  test_provider_comparison.py  test_schema_provider_integration.py  test_workflows.py
tests/test_mcp/: __init__.py  test_manager.py
tests/test_providers/: __init__.py  test_base.py  test_claude.py  test_claude_edge_cases.py  test_claude_parameter_passing.py  test_claude_parameters.py  test_claude_parse_recovery.py  test_claude_performance.py  test_claude_retry_backoff.py  test_claude_streaming_error.py  test_copilot.py  test_factory.py  test_idle_recovery.py  test_provider_coexistence.py  test_registry.py
(+48 files in other folders)
